# autonomous-driving

./: README.md
EKF_assignment/: readme.md
EKF_assignment/EKF/: plotter.py
EKF_assignment/EKF/data/: 2022-07-26-12-45-29.bag
EKF_assignment/EKF/src/ekf/: CMakeLists.txt  package.xml
KF_assignment/: .gitignore  CMakeLists.txt  LICENSE  README.md  istruzioni.txt
KF_assignment/demo/: main.cpp
KF_assignment/include/: CloudManager.h
KF_assignment/include/tracker/: KalmanFilter.h  Tracker.h  Tracklet.h
KF_assignment/include/viewer/: Renderer.h  viewer_utils.hpp
KF_assignment/src/: CloudManager.cpp
KF_assignment/src/tracker/: KalmanFilter.cpp  Tracker.cpp  Tracklet.cpp
KF_assignment/src/viewer/: Renderer.cpp
PF_assignment/: README.md  pf_slam.txt  plotter.py
PF_assignment/data/: map_data.txt  map_reflector.pcd
PF_assignment/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
PF_assignment/devel/lib/pkgconfig/: particle.pc
PF_assignment/doc/: report.md
PF_assignment/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
PF_assignment/install/lib/pkgconfig/: particle.pc
PF_assignment/src/particle/: CMakeLists.txt  package.xml
PF_assignment/src/particle/include/: Box.hpp  Renderer.hpp
PF_assignment/src/particle/src/: Renderer.cpp  main.cpp  particle_filter.cpp
VM_assignment/: README.txt
VM_assignment/common/: controller_constraints.m  gen_simulation.m  lyapunov.m  plotter.m  plotter2.m  power_train.m  steering_angle_u.m  steering_constraints.m  vehicle_geometry.m
VM_assignment/controllers/steering/: sim_lqr.m  sim_pole_place.m
VM_assignment/controllers/steering/src/: feedforward.m  step_response.m  (+1 more)
VM_assignment/models/kinematic/: kinematic.m  xdot.m
platform_assignment_1/: .gitignore  CMakeLists.txt  README
platform_assignment_1/include/: Renderer.hpp  tree_utilities.hpp
platform_assignment_1/src/: Renderer.cpp  cluster_extraction.cpp  config.cfg  istruzioni.txt  objective_5.txt
(+49 files in other folders)
